--- a/ui/src/css/kif-common.less
+++ b/ui/src/css/kif-common.less
@@ -2,3 +2,9 @@
 @download-text-color: #000000;
 @download-button-color-start: #6AC8D2;
 @download-button-color-stop: #DCF1F3;
+
+.ellipsis () {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
