Revert "Removed flash add-on for clipboard access."
This reverts commit fe9124e07317521f6ffdceb79cb2376caaea185e.

--- a/ui/src/css/kif-details.less
+++ b/ui/src/css/kif-details.less
@@ -124,7 +124,7 @@
 
     .border-radius(10px, 10px, 0px, 0px);
 
-    &:hover {
+    &.zeroclipboard-is-hover {
         .bw-gradient(
             lighten(@copy-default, 10%),
             (@copy-bw-start + (@copy-bw-start/10)),
@@ -132,7 +132,7 @@
         );
     }
 
-    &:active {
+    &.zeroclipboard-is-active {
         .inner-shadow(2px, 4px, 6px, 0.5);
     }
 }
