--- a/ui/src/css/kif.less
+++ b/ui/src/css/kif.less
@@ -7,7 +7,7 @@
 body { background: @bg-color; }
 
 #footer {
-    font-size: 12;
+    font-size: 25%;
     width: 100%;
     p {
         text-align: right;
