Fixed the size of the footer. It's set to 12pt font.

--- a/ui/src/css/kif.less
+++ b/ui/src/css/kif.less
@@ -7,7 +7,7 @@
 body { background: @bg-color; }
 
 #footer {
-    font-size: 25%;
+    font-size: 12px;
     width: 100%;
     p {
         text-align: right;
