--- a/ui/src/css/kif.less
+++ b/ui/src/css/kif.less
@@ -1,8 +1,8 @@
-@import-once "elements.less";
-@import-once "kif-common";
-@import-once "kif-menu";
-@import-once "kif-details";
-@import-once "kif-metadata";
+@import "elements.less";
+@import "kif-common";
+@import "kif-menu";
+@import "kif-details";
+@import "kif-metadata";
 
 body { background: @bg-color; }
 
